Revise README with updated application details
Updated application descriptions and installation instructions in README.